# uAgent-Examples

./: .gitignore  README.md
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml
.github/workflows/: deploy-agents.yaml
1-uagents/.avctl/: config.toml
1-uagents/03-multi-agent-communication/: machinery.py  monitor.py  repairer.py
1-uagents/07-mailbox-agents/: alice.py  bob.py
1-uagents/communication/slack-agent/: README.md  agent.py  pyproject.toml
1-uagents/examples/advanced/: pyproject.toml
1-uagents/examples/advanced/async-loops/: external_loop_attach.py  external_loop_run.py
1-uagents/examples/advanced/chat_api_example/: chatAPI.py
1-uagents/examples/advanced/deltaV-dialogues/: deltav-dialogues.py
1-uagents/examples/advanced/open-dialogue-chitchat/: agent1.py  agent2.py
1-uagents/examples/advanced/open-dialogue-chitchat/dialogues/: chitchat.py
1-uagents/examples/advanced/predefined-dialogue-chitchat/: agent1.py  agent2.py
1-uagents/examples/advanced/predefined-dialogue-chitchat/dialogues/: hardcoded_chitchat.py
1-uagents/examples_existing/04-storage/: main.py
1-uagents/examples_existing/06-send-tokens/: main.py
1-uagents/examples_existing/09-booking-protocol-demo/: query.py
1-uagents/finance/company-overview-agent/: README.md  agent.py
1-uagents/finance/company-ticker-resolver-agent/: README.md  agent.py
1-uagents/finance/finance-q&a-agent/: README.md  ai.py
1-uagents/finance/financial-news-sentiment-agent/: README.md  agent.py
1-uagents/finance/finbert-financial-sentiment-agent/: README.md  (+1 more)
1-uagents/geo/geoapify-car-park-locator-agent/: .secrets.template  README.md  pyproject.toml
1-uagents/geo/geoapify-car-park-locator-agent/.avctl/: config.toml
1-uagents/utility/grammar-agent/: README.md  pyproject.toml
1-uagents/utility/grammar-agent/.avctl/: config.toml
1-uagents/utility/openAI-translator-agent/: README.md  agent.py  pyproject.toml
1-uagents/utility/post-extractor-agent/: README.md  agent.py  pyproject.toml
1. uagents/finance/financial-news-sentiment/: README.md  agent.py  pyproject.toml  quota.py
1. uagents/finance/financial-news-sentiment/test/: user.py
1. uagents/utility/weather-agent/: README.md  agent.py  pyproject.toml
1. uagents/utility/weather-agent/test/: user.py
1. uagents/utility/website-scraping-agent/: README.md  agent.py  pyproject.toml
1. uagents/utility/website-scraping-agent/test/: user.py
1. uagents/utility/website-validation-agent/: README.md  agent.py  pyproject.toml
1. uagents/utility/website-validation-agent/test/: user.py
2-solutions/asset-signal-agent/: README.md  agent.py  pyproject.toml
2-solutions/average-agent/: pyproject.toml
2-solutions/blog-creator-agent/: README.md  agent.py  models.py  pyproject.toml
2-solutions/finance/finance-q&a-agent/: pyproject.toml
2-solutions/finance/finance-q&a-agent/.avctl/: config.toml
2-solutions/finance/stock-price-agent/: pyproject.toml
2-solutions/flights-retriever-agent/: helpers.py
2-solutions/github-organisation-agent/: pyproject.toml
2-solutions/github-pull-requests-agent/: agent.py  pyproject.toml
2-solutions/github-repositories-agent/: agent.py
2-solutions/google-gemini-agent/: pyproject.toml
2-solutions/grammar-agent/: agent.py
2-solutions/inventory-monitoring/: README.md  pyproject.toml
2-solutions/inventory-monitoring/src/: main.py
2-solutions/openAI-translator-agent/: README.md
2-solutions/seo-analysis-agent/: README.md  agent.py  pyproject.toml  seo_utils.py
2-solutions/stripe-payment-agent/: README.md  agent.py  crew_ai.py  payment_model.py  run_agents.py  user_agent.py  webhook.py
2-solutions/tavily-search-agent/: .secrets.template  pyproject.toml
2-solutions/tavily-search-agent/.avctl/: config.toml
2-solutions/topic-extractor-agent/: README.md  agent.py  models.py  pyproject.toml
3-applications/email-agent/: README.md  pyproject.toml
3-applications/jupyter-notebook/: agent_in_notebook.ipynb
3-applications/postgres-database/: .dockerignore  pyproject.toml
3-applications/postgres-database/src/: constants.py
3-applications/postgres-database/src/db/schemas/: employees.sql
3-applications/react-web-with-flask-and-agents/: README.md
3-applications/react-web-with-flask-and-agents/backend/: app.py  pyproject.toml
3-applications/react-web-with-flask-and-agents/backend/agents/: news_agent.py
3-applications/sending-and-verifying-erc-token-transations-with-agent/: .env.example  README.md  pyproject.toml  transaction.py
3-applications/stripe-payment-agent/: README.md  example.env  pyproject.toml  user_agent.py  webhook.py
4-community/MakeTrip_PICT_Codesnap/: README.md
4-community/elderly-assistant/: README.md  agent.py
4-community/github_contributions/: README.md
4-community/job-finder/: agent.py
4-community/langchain-db-connector/: .env.template  README.md
4-community/notion-feedback-checker/: README.md
4-community/speaker-diarization/: README.md  agent.py
4-community/top-5-priority-emails-agent/: agent.py
4-community/uAgent-IoT-Connector/: README.md
4-community/video-agent/: README.md
4-community/website_validation/: README.md  agent.py
5-documentation/jupyter-notebook/: agent.py  pyproject.toml
6-deployed-agents/finance/company-overview-agent/: README.md  agent.py  chat_proto.py  functions.py  pyproject.toml
6-deployed-agents/geo/google-api-geolocation-agent/: README.md  agent.py  chat_proto.py  coordinates.py  pyproject.toml
6-deployed-agents/knowledge-base/agentverse-search-agent/: README.md  agent.py  ai.py  chat_proto.py  pyproject.toml  tools.py
6-deployed-agents/knowledge-base/agentverse-search-agent/.avctl/: config.toml
6-deployed-agents/knowledge-base/asi1-agent/: .secrets.template  README.md  agent.py  ai.py  protocols.py  pyproject.toml
6-deployed-agents/knowledge-base/asi1-agent/.avctl/: config.toml
6-helpers/dockerfile/: README.md  pyproject.toml
6-helpers/dockerfile/src/: agent.py
6-helpers/postgres-database/: README.md  docker-compose.yml
scripts/: deploy-all-agents.sh
(+476 files in other folders)
