[tool.poetry]
name = "inventory-monitoring"
version = "0.1.0"
description = ""
authors = ["Joshua Croft <josh@fetch.ai>"]
readme = "README.md"
packages = [{include = "inventory-monitoring"}]

[tool.poetry.dependencies]
python = "^3.10"
tinydb = "^4.8.2"
uagents = { version = "^0.13.0", python = ">=3.10,<3.13" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
