[tool.poetry]
name = "tavily-agent"
version = "0.1.0"
description = "TaVILY Agent"
authors = ["Florian Wilde <florian.wilde@fetch.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10,<3.13"
uagents = "^0.15.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
