[tool.poetry]
name = "email-agent"
version = "0.1.0"
description = "An agent that sends an email to the agent owner."
authors = ["Florian Wilde <florian.wilde@fetch.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10,<3.13"
uagents = "^0.18.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
