[tool.poetry]
name = "postgres-database-with-an-agent"
version = "0.1.0"
description = ""
authors = ["gautamgambhir97 <gautam.gambhir@fetch.ai>"]
readme = "README.md"
packages = [{include = "postgres-database-with-an-agent"}]

[tool.poetry.dependencies]
python = "^3.10"
psycopg2-binary = "^2.9.9"
uagents = { version = "^0.13.0", python = ">=3.10,<3.13" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
