[tool.poetry]
name = "web3-project"
version = "0.1.0"
description = ""
authors = ["gautamgambhir97 <gautam.gambhir@fetch.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
web3 = "^7.0.0"
python-dotenv = "^1.0.1"
uagents = { version = "^0.18.0" }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
