[tool.poetry]
name = "agent_with_docker"
version = "0.1.0"
description = ""
authors = ["gautamgambhir97 <gautam.gambhir@fetch.ai>"]
readme = "README.md"
packages = [{include = "agent_with_dockers"}]

[tool.poetry.dependencies]
python = "^3.10"
uagents = { version = "^0.13.0", python = ">=3.10,<3.13" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
