[tool.poetry]
name = "examples"
version = "0.1.0"
description = ""
authors = ["gautamgambhir97 <gautam.gambhir@fetch.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
uagents = "^0.17.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
