[tool.poetry]
name = "stocks-agent"
version = "0.1.0"
description = "This agent helps you to get stocks price for given ticker symbol."
authors = ["Abhi Gangani <abhi.gangani@fetch.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10,<3.13"
uagents = "^0.15.2"
requests = "^2.32.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
