[tool.poetry]
name = "react-web"
version = "0.1.0"
description = "Your project description"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
aiohttp = "3.9.5"
aiosignal = "1.3.1"
beautifulsoup4 = "4.12.3"
bs4 = "0.0.2"
cosmpy = "0.9.2"
grpcio = "1.63.0"
jsonschema = "4.22.0"
msgpack = "1.0.8"
multidict = "6.0.5"
packaging = "24.0"
requests = "2.31.0"
uagents = "0.17.1"
urllib3 = "2.2.1"
uvicorn = "0.30.1"
websockets = "10.4"
yarl = "1.9.4"
Flask = "3.0.3"
Flask-Cors = "5.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
