[tool.poetry]
name = "company-overview-agent"
version = "0.1.0"
description = "This agent helps you to get overview of a given company's ticker symbol."
authors = ["abhifetch <abhi.gangani@fetch.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10,<3.13"
uagents = "^0.22.0"
requests = "^2.32.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
