[tool.poetry]
name = "google-geolocation-agent"
version = "0.1.0"
description = "Google API Geolocation Agent"
authors = ["Alejandro Morales <alejandro.madrigal@fetch.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10,<3.13"
uagents = "^0.15.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
