[tool.poetry]
name = "agentverse-search-agent"
version = "0.1.0"
description = ""
authors = ["Manuele Sigona <manuele.sigona@fetch.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10,<3.13"
uagents = "^0.20.1"
requests = "^2.32.3"
agentverse-client = "^0.1.0"
langgraph = "^0.3.2"
langchain-openai = "^0.3.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
