[tool.poetry]
name = "asi1-agent"
version = "0.1.0"
description = ""
authors = ["Attila Bagoly <attila.bagoly@fetch.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10,<3.13"
uagents = "^0.22.4"
uagents-core = "^0.3.1"
openai = "^1.82.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
